# pavan-profile-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  claude_desktop_config.example.json  pyproject.toml  railway.toml  render.yaml  server.py  smithery.yaml  start.sh
data/: profile.json
