[project]
name = "pavan-profile-mcp"
version = "1.0.0"
description = "Personal Knowledge MCP Server — Pavan Madduri's professional profile as a queryable AI API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Pavan Madduri", email = "pavan4devops@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "portfolio", "ai-infrastructure", "cloud-native"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/pmady/pavan-profile-mcp"
Repository = "https://github.com/pmady/pavan-profile-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
